--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,4 @@
 DB_NAME=snapgo
-DB_PASS=db_pass
-DB_USER=db_user
-# DB_HOST=127.0.0.1 # RUNNING APP WITHOUT DOCKER
-DB_HOST=postgres # RUNNING APP WITH DOCKER
-# DB_HOST=host.docker.internal # RUNNING APP WITH DOCKER AND POINTING TO LOCALHOST
-DB_PORT=5432
-JWT_SECRET=snapgo_secret  # COULD BE ANYTHING
+MONGODB_URI=mongodb://localhost:27017/snapgo
+JWT_SECRET=snapgo_secret
 CLOUDINARY_URL=
